metadata/unpackaged/objects/Mass_Update_Test__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Mass Update Test</relationshipLabel>
        <relationshipName>R00N70000002HxczEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fld_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fld Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fld_Currency__c</fullName>
        <label>Fld Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fld_Date__c</fullName>
        <label>Fld Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fld_Datetime__c</fullName>
        <label>Fld Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fld_Email__c</fullName>
        <label>Fld Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fld_Number__c</fullName>
        <label>Fld Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fld_Percent__c</fullName>
        <label>Fld Percent</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fld_Phone__c</fullName>
        <label>Fld Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fld_Picklist_Multi__c</fullName>
        <label>Fld Picklist Multi</label>
        <picklist>
            <picklistValues>
                <fullName>MValue 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MValue 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MValue 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fld_Picklist_Single__c</fullName>
        <label>Fld Picklist Single</label>
        <picklist>
            <picklistValues>
                <fullName>Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fld_TextArea_Long__c</fullName>
        <label>Fld TextArea Long</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fld_TextArea__c</fullName>
        <label>Fld TextArea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fld_Text__c</fullName>
        <label>Fld Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fld_Url__c</fullName>
        <label>Fld Url</label>
        <type>Url</type>
    </fields>
    <label>Mass Update Test</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Mass Update Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Update Test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>